fix placeholder text color on text search for dark mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,3 +14,13 @@
     width: 100%;
     height: 5vh;
 }
+
+.form-control-light::placeholder {
+    color: #f8f9fa !important; 
+    opacity: 0.7 !important;
+}
+
+.form-control-dark::placeholder {
+    color: #212529 !important;
+    opacity: 0.7 !important;
+}
